syntax = "proto3";

package movie;

option go_package = "movie-project/proto/movie";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service MovieService {
  rpc CreateMovie(CreateMovieRequest) returns (Movie) {
    option (google.api.http) = {
      post: "/v1/movies"
      body: "*"
    };
  }
  rpc GetMovie(GetMovieRequest) returns (Movie) {
    option (google.api.http) = {
      get: "/v1/movies/{id}"
    };
  }
  rpc ListMovies(ListMoviesRequest) returns (ListMoviesResponse) {
    option (google.api.http) = {
      get: "/v1/movies"
    };
  }
  rpc UpdateMovie(UpdateMovieRequest) returns (Movie) {
    option (google.api.http) = {
      put: "/v1/movies/{id}"
      body: "*"
    };
  }
  rpc DeleteMovie(DeleteMovieRequest) returns (DeleteMovieResponse) {
    option (google.api.http) = {
      delete: "/v1/movies/{id}"
    };
  }
}

message Movie {
  int64 id = 1;
  string title = 2;
  string director = 3;
  google.protobuf.Timestamp release_date = 4;
  string genre = 5;
  float rating = 6;
}

message CreateMovieRequest {
  string title = 1;
  string director = 2;
  google.protobuf.Timestamp release_date = 3;
  string genre = 4;
  float rating = 5;
}

message GetMovieRequest {
  int64 id = 1;
}

message ListMoviesRequest {
  int32 page_size = 1;
  int32 page_number = 2;
}

message ListMoviesResponse {
  repeated Movie movies = 1;
  int32 total_count = 2;
}

message UpdateMovieRequest {
  int64 id = 1;
  string title = 2;
  string director = 3;
  google.protobuf.Timestamp release_date = 4;
  string genre = 5;
  float rating = 6;
}

message DeleteMovieRequest {
  int64 id = 1;
}

message DeleteMovieResponse {
  bool success = 1;
}